@@ -1,3 +1,9 @@
+2010-07-18  Mike Krüger  <mkrueger@novell.com>
+
+	* Makefile.am:
+	* CBinding.csproj:
+	* Gui/CTextEditorExtension.cs: Track API changes.
+
 2010-07-15  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/DataProvider.cs: Track API changes.
